// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Should render default tooltip correctly 1`] = `
<span
  class="sc-AxirZ jFbosC"
  type="p3"
>
  Informação adicional
</span>
`;

exports[`Tooltip Should render small tooltip correctly 1`] = `
<span
  class="sc-AxirZ jFbosC"
  type="p3"
>
  123
</span>
`;
